--- a/Machine Learning/model_1.1.ipynb
+++ b/Machine Learning/model_1.1.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -235,14 +235,14 @@
        "4  Yonge University Spadina  January       5-9AM             1     8  2019  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# the dataset used contains all delays under 30 mins. \n",
-    "df = pd.read_csv(\"../Data/ttc_subway_delay_2018_2019.csv\", encoding='unicode_escape')\n",
+    "df = pd.read_csv(\"../Data/ttc_subway_delay_2018_2019_for_machine_learning.csv\", encoding='unicode_escape')\n",
     "# Drop the null columns where all values are null\n",
     "df = df.dropna(axis='columns', how='all')\n",
     "df.head()\n",
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -402,7 +402,7 @@
        "4       10     S   YU             1     8  2019  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,14 +430,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(13529, 12) (13529,)\n"
+      "(13320, 12) (13320,)\n"
      ]
     }
    ],
@@ -455,16 +455,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.33, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.25, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -491,11 +491,14 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>id</th>\n",
-       "      <th>min_delay</th>\n",
+       "      <th>date</th>\n",
+       "      <th>time</th>\n",
+       "      <th>day</th>\n",
+       "      <th>station</th>\n",
+       "      <th>code</th>\n",
        "      <th>min_gap</th>\n",
-       "      <th>vehicle</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
+       "      <th>bound</th>\n",
+       "      <th>line</th>\n",
        "      <th>month_number</th>\n",
        "      <th>hour</th>\n",
        "      <th>year</th>\n",
@@ -503,86 +506,101 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1331</th>\n",
-       "      <td>9690.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>5621.0</td>\n",
-       "      <td>43.7814</td>\n",
-       "      <td>-79.4150</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>2018.0</td>\n",
+       "      <th>9167</th>\n",
+       "      <td>9366</td>\n",
+       "      <td>2018-05-19</td>\n",
+       "      <td>14:09</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>DON MILLS STATION</td>\n",
+       "      <td>PUSO</td>\n",
+       "      <td>23</td>\n",
+       "      <td>W</td>\n",
+       "      <td>SHP</td>\n",
+       "      <td>5</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2779</th>\n",
-       "      <td>431.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5220.0</td>\n",
-       "      <td>43.3944</td>\n",
-       "      <td>-79.2536</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>2019.0</td>\n",
+       "      <th>12235</th>\n",
+       "      <td>12474</td>\n",
+       "      <td>2018-10-18</td>\n",
+       "      <td>12:25</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>WILSON STATION</td>\n",
+       "      <td>PUTS</td>\n",
+       "      <td>16</td>\n",
+       "      <td>N</td>\n",
+       "      <td>YU</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5875</th>\n",
-       "      <td>2688.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>5205.0</td>\n",
-       "      <td>43.3814</td>\n",
-       "      <td>-79.3210</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>2019.0</td>\n",
+       "      <th>13216</th>\n",
+       "      <td>13472</td>\n",
+       "      <td>2018-12-14</td>\n",
+       "      <td>7:00</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>SUMMERHILL STATION</td>\n",
+       "      <td>EUNT</td>\n",
+       "      <td>5</td>\n",
+       "      <td>N</td>\n",
+       "      <td>YU</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9439</th>\n",
-       "      <td>6703.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>5089.0</td>\n",
-       "      <td>43.4111</td>\n",
-       "      <td>-79.1846</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>2019.0</td>\n",
+       "      <th>5910</th>\n",
+       "      <td>6046</td>\n",
+       "      <td>2019-11-25</td>\n",
+       "      <td>8:14</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>YONGE BLOOR YUS STATION</td>\n",
+       "      <td>MUI</td>\n",
+       "      <td>6</td>\n",
+       "      <td>N</td>\n",
+       "      <td>YU</td>\n",
+       "      <td>11</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8117</th>\n",
-       "      <td>7764.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>5243.0</td>\n",
-       "      <td>43.4357</td>\n",
-       "      <td>-79.1549</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2018.0</td>\n",
+       "      <th>3205</th>\n",
+       "      <td>3262</td>\n",
+       "      <td>2019-06-20</td>\n",
+       "      <td>13:49</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>KEELE STATION</td>\n",
+       "      <td>PUSTS</td>\n",
+       "      <td>6</td>\n",
+       "      <td>E</td>\n",
+       "      <td>BD</td>\n",
+       "      <td>6</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2019</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          id  min_delay  min_gap  vehicle  latitude  longitude  month_number  \\\n",
-       "1331  9690.0        3.0      6.0   5621.0   43.7814   -79.4150           6.0   \n",
-       "2779   431.0        3.0      5.0   5220.0   43.3944   -79.2536           1.0   \n",
-       "5875  2688.0        4.0      8.0   5205.0   43.3814   -79.3210           5.0   \n",
-       "9439  6703.0        5.0      9.0   5089.0   43.4111   -79.1846          12.0   \n",
-       "8117  7764.0        5.0     10.0   5243.0   43.4357   -79.1549           2.0   \n",
+       "          id        date   time       day                  station   code  \\\n",
+       "9167    9366  2018-05-19  14:09  Saturday        DON MILLS STATION   PUSO   \n",
+       "12235  12474  2018-10-18  12:25  Thursday           WILSON STATION   PUTS   \n",
+       "13216  13472  2018-12-14   7:00    Friday       SUMMERHILL STATION   EUNT   \n",
+       "5910    6046  2019-11-25   8:14    Monday  YONGE BLOOR YUS STATION    MUI   \n",
+       "3205    3262  2019-06-20  13:49  Thursday            KEELE STATION  PUSTS   \n",
        "\n",
-       "      hour    year  \n",
-       "1331  18.0  2018.0  \n",
-       "2779   8.0  2019.0  \n",
-       "5875  22.0  2019.0  \n",
-       "9439  13.0  2019.0  \n",
-       "8117   5.0  2018.0  "
+       "       min_gap bound line  month_number  hour  year  \n",
+       "9167        23     W  SHP             5    14  2018  \n",
+       "12235       16     N   YU            10    12  2018  \n",
+       "13216        5     N   YU            12     7  2018  \n",
+       "5910         6     N   YU            11     8  2019  \n",
+       "3205         6     E   BD             6    13  2019  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,9 +620,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: '2018-05-19'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-19-43d3ff97e2f3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Scale data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mX_scaler\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMinMaxScaler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mX_train_scaled\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX_scaler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mX_test_scaled\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX_scaler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\_data.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m    337\u001b[0m         \u001b[1;31m# Reset internal state before fitting\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    338\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 339\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpartial_fit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    340\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    341\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mpartial_fit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\_data.py\u001b[0m in \u001b[0;36mpartial_fit\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m    371\u001b[0m         X = check_array(X,\n\u001b[0;32m    372\u001b[0m                         \u001b[0mestimator\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mFLOAT_DTYPES\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 373\u001b[1;33m                         force_all_finite=\"allow-nan\")\n\u001b[0m\u001b[0;32m    374\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    375\u001b[0m         \u001b[0mdata_min\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnanmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[1;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[0;32m    529\u001b[0m                     \u001b[0marray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcasting\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"unsafe\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    530\u001b[0m                 \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 531\u001b[1;33m                     \u001b[0marray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morder\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0morder\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    532\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mComplexWarning\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    533\u001b[0m                 raise ValueError(\"Complex data not supported\\n\"\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\numpy\\core\\numeric.py\u001b[0m in \u001b[0;36masarray\u001b[1;34m(a, dtype, order)\u001b[0m\n\u001b[0;32m    536\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    537\u001b[0m     \"\"\"\n\u001b[1;32m--> 538\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morder\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0morder\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    539\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    540\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: '2018-05-19'"
+     ]
+    }
+   ],
    "source": [
     "# Scale data\n",
     "X_scaler = MinMaxScaler().fit(X_train)\n",
@@ -614,11 +648,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Encode Data\n",
+    "# Encode Data \n",
     "label_encoder = LabelEncoder()\n",
     "label_encoder.fit(y_train)\n",
     "encoded_y_train = label_encoder.transform(y_train)\n",
